# verifyfs

./: CMakeLists.txt  LICENSE  README.md
source/: FileVerifier.cpp  FileVerifier.h  FuseFSGlue.cpp  FuseFSGlue.h  IFileVerifier.cpp  IFileVerifier.h  IFuseFSProvider.cpp  IFuseFSProvider.h  IPosixFileSystem.cpp  IPosixFileSystem.h  PosixFileSystem.cpp  PosixFileSystem.h  VerifyFS.cpp  VerifyFS.h  main.cpp
test/: _source.manifest  makeManifest  makeTestData  testAssets.h  testFileVerifier.cpp  testVerifyFS.cpp
test/_source/: lorem.txt
test/_source/a/: bob.txt
test/_source/b/: wilma.txt
